config_kubernetes.yml
apiVersion: v1
kind: Namespace
metadata:
  name: production
  labels:
    name: production
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins-sp3-fb-service
  namespace: production
  labels:
    app: s-jenkins-sp3-fb
    env: production
spec:
  type: NodePort
  selector:
    app: s-jenkins-sp3-fb
  ports:
    - port: 80
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins-sp3-fb-deployment
  namespace: production
  labels:
    app: s-jenkins-sp3-fb
    env: production
spec:
  selector:
    matchLabels:
      app: s-jenkins-sp3-fb
  replicas: 2
  template:
    metadata:
      labels:
        app: s-jenkins-sp3-fb
    spec:
      volumes:
        - configMap:
            name: jenkins-sp3-fb-configmap
          name: config-fb
      containers:
        - name: jenkins-sp3-fb-pod
          image: $DOCKER_REGISTRY/$DOCKER_IMAGE_NAME:$BUILD_NUMBER
          ports:
            - containerPort: 80
          volumeMounts:
            - name: config-fb
              mountPath:  "/var/www/sosial-media/config.php"
              subPath: "config.php"
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: p-ingress
  namespace: production
  annotations:
    ## Untuk menaikan batas upload file
    nginx.org/client-max-body-size: "10m"
    ## Memaksa jalan di https
   # nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
## Service Location n Characters
  - host: jenkins-pesbuk.borjong.monster
    http:
      paths:
      - path: /
        backend:
          serviceName: jenkins-sp3-fb-service
          servicePort: 80
